Added appraisal reports for managers - status+rating

--- a/application/modules/default/views/scripts/myteamappraisal/index.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/index.phtml
@@ -102,6 +102,9 @@ else
 		<button class="business_unit_clear" type="button" id="businessunitclear"  class="inputclear" style="display:none;"  onclick="displaysearchedbusinessunit('')">Clear</button>
     </div>
     <?php } ?>
+        <div style="margin-top: 17px;">
+            <a href="../default/reports/exportmyteamappraisalstatuses" class="downloadLink" style="margin-top: 12px">Status Report</a>
+        </div>
     
 	<div class="employee_appraisal_view my_team_appraisal" id="empaccdiv">
 <?php   
