--- a/application/modules/default/views/scripts/myteamappraisal/index.phtml
+++ b/application/modules/default/views/scripts/myteamappraisal/index.phtml
@@ -154,7 +154,7 @@ else
 												<img class="js_profile_img" onerror="this.src='<?php echo DOMAIN; ?>public/media/images/default-profile-pic.jpg'" src="<?php echo $this->baseUrl("public/uploads/profile/").$edata['line_manager_img_'.$edata['line_manager_'.$i]];?>" width="28px"  height="28px" />
 											</div>
 										</span>
-										<span class="line_mgr_text">L<?php echo $i;?> Rating</span>
+										<span class="line_mgr_text">Line Manager Rating</span>
 										<span class="line_mgr_rat"><?php echo $edata['line_rating_'.$i];?></span>
 									</div>
 					<?php
