--- a/application/modules/default/views/scripts/appraisalhistoryself/view.phtml
+++ b/application/modules/default/views/scripts/appraisalhistoryself/view.phtml
@@ -31,7 +31,7 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
             }
         }
 	$app_status_array = array(1=>APP_PENDING_EMP, 2=>APP_PENDING_L1, 3=>APP_PENDING_L2, 4=>APP_PENDING_L3,
-										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_COMPLETED);
+										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_PENDING_EMP_FINAL, 8=>APP_COMPLETED);
 	$empRatData = $this->appEmpRatingsData;
 	$catData = $this->categories_data;
 	$qData = $this->questions_data;
