--- a/application/modules/default/views/scripts/appraisalself/index.phtml
+++ b/application/modules/default/views/scripts/appraisalself/index.phtml
@@ -26,7 +26,7 @@ if(isset($this->rowexist) && $this->rowexist == 'norows'){?>
 		$ratingMin = 0; $ratingMax = 10;
 	}
 	$app_status_array = array(1=>APP_PENDING_EMP, 2=>APP_PENDING_L1, 3=>APP_PENDING_L2, 4=>APP_PENDING_L3,
-										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_COMPLETED);
+										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_PENDING_EMP_FINAL, 8=>APP_COMPLETED);
 	//echo '<pre>';print_r($app_status_array);
 	$empRatData = $this->appEmpRatingsData;
 	//echo '<pre>';print_r($empRatData);
