--- a/patches/patches_2.0/application/modules/default/views/scripts/myteamappraisal/getsearchedempcontent.ajax.phtml
+++ b/patches/patches_2.0/application/modules/default/views/scripts/myteamappraisal/getsearchedempcontent.ajax.phtml
@@ -39,7 +39,7 @@ else
     $status_arr = array(0 => 'Pending employee ratings',1 => 'Pending L1 ratings',2 => 'Pending L2 ratings',
                 3 => 'Pending L3 ratings',4 => 'Pending L4 ratings',5 => 'Pending L5 ratings',6 => 'Completed'); 
     $app_status_array = array(1=>APP_PENDING_EMP, 2=>APP_PENDING_L1, 3=>APP_PENDING_L2, 4=>APP_PENDING_L3,
-										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_COMPLETED); 
+										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_PENDING_EMP_FINAL, 8=>APP_COMPLETED);
         
 ?>
     <script type="text/javascript" src="<?php echo MEDIA_PATH;?>js/pa.js"></script>
