--- a/patches/patches_2.0/application/modules/default/views/scripts/myteamappraisal/index.phtml
+++ b/patches/patches_2.0/application/modules/default/views/scripts/myteamappraisal/index.phtml
@@ -45,7 +45,7 @@ else
                 3 => 'Pending L3 ratings',4 => 'Pending L4 ratings',5 => 'Pending L5 ratings',6 => 'Completed');  
                 
     $app_status_array = array(1=>APP_PENDING_EMP, 2=>APP_PENDING_L1, 3=>APP_PENDING_L2, 4=>APP_PENDING_L3,
-										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_COMPLETED);
+										5=>APP_PENDING_L4, 6=>APP_PENDING_L5, 7=>APP_PENDING_EMP_FINAL, 8=>APP_COMPLETED);
     if(count($emp_data) > 0)
     {
 ?>
