--- a/application/modules/default/views/scripts/employee/add.phtml
+++ b/application/modules/default/views/scripts/employee/add.phtml
@@ -161,6 +161,13 @@ if(!empty($this->msgarray) && isset($this->msgarray))
                             </div>
 
                             <div class="new-form-ui">
+                                <label class="required"><?php echo $this->form->passwordtype->getLabel(); ?></label>
+                                <div class="division"><?php echo $this->form->passwordtype; ?>
+                                    <span id="errors-<?php echo $this->form->passwordtype->getId(); ?>" class="errors"><?php echo isset($this->msgarray['passwordtype'])?$this->msgarray['passwordtype']:"";?></span>
+                                </div>
+                            </div>
+
+                            <div class="new-form-ui">
                                 <label><?php echo $this->form->prefix_id->getLabel(); ?></label>
                                 <div class="division"><?php echo $this->form->prefix_id; ?>
                                 	<?php if(isset($this->msgarray['prefix_id'])){?>
