added default rating values

--- a/application/modules/default/views/scripts/appraisalratings/addratings.ajax.phtml
+++ b/application/modules/default/views/scripts/appraisalratings/addratings.ajax.phtml
@@ -70,6 +70,7 @@ if($this->ermsg == '')
 			<?php 
 			for($i=0;$i<$this->appraisal_rating;$i++)
 			{
+			    $defaultRatings = [APPRAISAL_RATING_1, APPRAISAL_RATING_2, APPRAISAL_RATING_3, APPRAISAL_RATING_4, APPRAISAL_RATING_5, APPRAISAL_RATING_6, APPRAISAL_RATING_7, APPRAISAL_RATING_8, APPRAISAL_RATING_9, APPRAISAL_RATING_10];
 			?>
 			<div class="new-form-ui clearb">
 				<label class="required">Rating Value</label>
